--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,8 +1,4 @@
 /* Reset styles */
-* {
-  box-sizing: border-box;
-}
-
 h1,
 h2,
 h3,
@@ -30,16 +26,10 @@ a {
 
 button {
   cursor: pointer;
-  font-family: inherit;
 }
 
 img {
   display: block;
   max-width: 100%;
-}
-
-input,
-textarea {
-  padding: 0;
-  resize: none;
+  height: auto;
 }
