--- a/src/css/1-gallery.css
+++ b/src/css/1-gallery.css
@@ -1,35 +1,41 @@
-.gallery {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 24px;
 
-  max-width: 1440px;
-  padding: 24px 0;
-  margin: 0 auto;
+
+.gallery {
+  display: grid;
+  max-width: 1140px;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-auto-rows: 240px;
+  grid-gap: 24px;
+  justify-content: center;
+  padding: 0;
+  list-style: none;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.gallery-item {
+  position: relative;
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+}
+
+.gallery-image:hover {
+  transform: scale(1.03);
 }
 
 .gallery-image {
-  transform: scale(1);
-  transition: transform 250ms ease-out;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  transition: transform var(--animation-duration) var(--timing-function);
 }
 
-.gallery-image:hover,
-.gallery-image:focus {
-  transform: scale(1.04);
+.gallery-link {
+  display: block;
+  text-decoration: none;
+  height: 100%;
 }
 
-.gallery-container {
-  background: rgba(46, 47, 66, 0.8);
-}
-
-.gallery-container button.sl-close,
-.gallery-container .sl-navigation button.sl-prev,
-.gallery-container .sl-navigation button.sl-next {
-  color: #fff;
-}
-
-div.gallery-container div.sl-counter {
-  color: #fff;
+.gallery-link:hover {
+  cursor: zoom-in;
 }
