--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,16 +5,12 @@
   |============================
 */
 @import url('./reset.css');
-@import url('./1-gallery.css');
-@import url('./2-form.css');
 
 :root {
-  font-family: 'Montserrat', Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
 
   color: #242424;
   background-color: rgba(255, 255, 255, 0.87);
@@ -25,3 +21,31 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 16px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+/*   background-color: #fafafa; */
+  color: #212121;
+  line-height: 1.5;
+}
+
+
+h1 {
+  margin-bottom: 34px;
+  font-family: "Montserrat", Medium;
+  color:#0e4acd
+}
+.link{
+  color:#04797b;
+  font-family: "Montserrat", Medium;
+  font-size: 16px;
+}
+
